--- a/index.html
+++ b/index.html
@@ -738,8 +738,12 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
-          <p>Estudiante de ingenieria de sistema, Tecnologo en analisis y sistema formacion.Apacionado por las redes neuronales y programacion </p>
+          <h2>Acerca de </h2>
+          <p>
+            Soy un ingeniero de sistemas y tecnologo en analisis y desarrollo de sistemas de inforrmación, apasionado por el desarrollo web y las tecnologías digitales. Tengo experiencia en la creación de aplicaciones web y he completado varios diplomados en esta área, lo que me ha permitido adquirir un conjunto sólido de habilidades técnicas. Me considero un profesional comprometido con la calidad y la eficiencia en mi trabajo, y valoro la lealtad y la estabilidad emocional en mi vida personal.
+            Además de mi carrera profesional, también tengo un gran interés en conocer otras culturas y viajar al extranjero. Creo que viajar es una forma valiosa de ampliar nuestros horizontes y aprender de otras personas y comunidades. Como apasionado de la tecnología, también estoy interesado en estar al día con las últimas tendencias y avances en mi campo, y me gusta estar en contacto con otros profesionales de la industria para intercambiar conocimientos y experiencias.
+            En resumen, me considero una persona comprometida y apasionada, tanto en mi carrera como en mi vida personal. Siempre estoy en busca de nuevas oportunidades para aprender y crecer, y estoy emocionado por las posibilidades que el futuro pueda ofrecer.
+          </p>
         </div>
 
         <div class="row">
