--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="https://ibb.co/q1VfPym" alt="" class="img-fluid rounded-circle">
+        <a href="https://ibb.co/kK3n94w"><img src="https://i.ibb.co/kK3n94w/foto.jpg" class="img-fluid rounded-circle"></a>
+
         <h1 class="text-light"><a href="index.html">Esteban Urbina</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>                
@@ -62,7 +63,7 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Acera de</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <!--<li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>-->
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Servicios</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contactos</span></a></li>
@@ -75,7 +76,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Esteban Urbina</h1>
-      <p>I'm <span class="typed" data-typed-items="Desarrollador Web, Analista y desarrollodor  de sistemas de  informacion e Ingeniero de SI"></span></p>
+      <b><p>Soy <span class="typed" data-typed-items="Desarrollador Web, Analista y desarrollodor  de sistemas de  informacion e Ingeniero de SI"></span></p></b>
     </div>
   </section><!-- End Hero -->
 
@@ -102,25 +103,24 @@
             
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <b><h3>Informacion & Contacto</h3> </b>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Porfesional en ingenieria de sistemas 
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>Mayo 28 </span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>3187170062</span></li>
-                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28 </span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pasto - Colombia </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Porfesion:</strong> <span> IngenieroDe Sistemas  </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Contacto:</strong> <span>3187170062</span></li>
+                   <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>28 </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Pasto - Colombia </span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Repositorio:</strong> <span>https://github.com/EstebanUrbina28</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Profesional</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>e.andres2012@hotmail.com</span></li>
+                  
+                  <li><i class="bi bi-chevron-right"></i> <strong>Corre Electronico</strong> <span>e.andres2012@hotmail.com</span></li>
 
                 </ul>
               </div>
@@ -139,7 +139,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Facts</h2>
+          <h2>Factores Relevantes</h2>
           <p></p>
         </div>
 
@@ -148,7 +148,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Happy Clients</strong> consequuntur quae</p>
             </div>
           </div>
@@ -156,7 +156,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Projects</strong> adipisci atque cum quia aut</p>
             </div>
           </div>
@@ -164,7 +164,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
             </div>
           </div>
@@ -186,10 +186,11 @@
     <section id="skills" class="skills section-bg">
       <div class="container">
 
-        <div class="section-title">
-          <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+        <div class="section-title" >
+          <h2>Conocimientos</h2>
+          <p>Domino HTML/CSS para diseño, PHP/Laravel y bases de datos para sistemas sólidos. Experiencia en Angular para interfaces interactivas y JavaScript/Java para funciones avanzadas en web</p>
+            Domino HTML/CSS para diseño, PHP/Laravel y bases de datos para sistemas sólidos. Experiencia en Angular para interfaces interactivas y JavaScript/Java para funciones avanzadas en web
+          </div>
 
         <div class="row skills-content">
 
@@ -228,14 +229,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">90%</i></span>
+              <span class="skill">laravel <i class="val">30%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">BD Relacionales <i class="val">70%</i></span>
+              <span class="skill">Angular <i class="val">20%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
